--- a/src/app/core/layouts/dashboard.html
+++ b/src/app/core/layouts/dashboard.html
@@ -1,6 +1,11 @@
-<div>
-    <div ui-view="toolbar"></div>
+
+<span class="page-container-bg-solid page-header-fixed page-sidebar-closed-hide-logo">
+<div ui-view="toolbar"></div>
+<div class="clearfix"></div>
+
+<div class="page-container">
     <div ui-view="navigation"></div>
     <div ui-view="content"></div>
-    ssssss
 </div>
+
+</span>
