--- a/src/app/main/dashboard/dbContent.html
+++ b/src/app/main/dashboard/dbContent.html
@@ -4,10 +4,133 @@
         <!-- BEGIN PAGE HEAD-->
         <div class="page-head">
             <!-- BEGIN PAGE TITLE -->
-            <div class="page-title">
-                <h1>Blank Page Layout
-                    <small>blank page layout</small>
-                </h1>
+
+            <div class="row">
+                <div class="col-md-12 ">
+                    <!-- BEGIN SAMPLE FORM PORTLET-->
+                    <div class="portlet light bordered">
+                        <div class="portlet-title">
+                            <div class="caption font-red-sunglo">
+                                <i class="icon-settings font-red-sunglo"></i>
+                                <span class="caption-subject bold uppercase"> Registration</span>
+                            </div>
+                            <div class="actions">
+                                <div class="btn-group">
+                                    <a class="btn btn-sm green dropdown-toggle" href="javascript:;" data-toggle="dropdown"> Actions
+                                        <i class="fa fa-angle-down"></i>
+                                    </a>
+                                    <ul class="dropdown-menu pull-right">
+                                        <li>
+                                            <a href="javascript:;">
+                                                <i class="fa fa-pencil"></i> Edit </a>
+                                        </li>
+                                        <li>
+                                            <a href="javascript:;">
+                                                <i class="fa fa-trash-o"></i> Delete </a>
+                                        </li>
+                                        <li>
+                                            <a href="javascript:;">
+                                                <i class="fa fa-ban"></i> Ban </a>
+                                        </li>
+                                        <li class="divider"> </li>
+                                        <li>
+                                            <a href="javascript:;"> Make admin </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portlet-body form">
+                            <form role="form">
+                                <div class="form-body">
+                                    <div class="form-group">
+                                        <label>Email Address</label>
+                                        <div class="input-group">
+                                                    <span class="input-group-addon">
+                                                        <i class="fa fa-envelope"></i>
+                                                    </span>
+                                            <input type="text" class="form-control" placeholder="Email Address"> </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Circle Input</label>
+                                        <div class="input-group">
+                                                    <span class="input-group-addon input-circle-left">
+                                                        <i class="fa fa-envelope"></i>
+                                                    </span>
+                                            <input type="text" class="form-control input-circle-right" placeholder="Email Address"> </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="exampleInputPassword1">Password</label>
+                                        <div class="input-group">
+                                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                                                    <span class="input-group-addon">
+                                                        <i class="fa fa-user font-red"></i>
+                                                    </span>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Left Icon</label>
+                                        <div class="input-icon">
+                                            <i class="fa fa-bell-o font-green"></i>
+                                            <input type="text" class="form-control" placeholder="Left icon"> </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Left Icon(.input-sm)</label>
+                                        <div class="input-icon input-icon-sm">
+                                            <i class="fa fa-bell-o"></i>
+                                            <input type="text" class="form-control input-sm" placeholder="Left icon"> </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Left Icon(.input-lg)</label>
+                                        <div class="input-icon input-icon-lg">
+                                            <i class="fa fa-bell-o"></i>
+                                            <input type="text" class="form-control input-lg" placeholder="Left icon"> </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Right Icon</label>
+                                        <div class="input-icon right">
+                                            <i class="fa fa-microphone fa-spin font-blue"></i>
+                                            <input type="text" class="form-control" placeholder="Right icon"> </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Right Icon(.input-sm)</label>
+                                        <div class="input-icon input-icon-sm right">
+                                            <i class="fa fa-bell-o"></i>
+                                            <input type="text" class="form-control input-sm" placeholder="Left icon"> </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Right Icon(.input-lg)</label>
+                                        <div class="input-icon input-icon-lg right">
+                                            <i class="fa fa-bell-o font-green"></i>
+                                            <input type="text" class="form-control input-lg" placeholder="Left icon"> </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Circle Input</label>
+                                        <div class="input-icon right">
+                                            <i class="fa fa-microphone"></i>
+                                            <input type="text" class="form-control input-circle" placeholder="Right icon"> </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Input with Icon</label>
+                                        <div class="input-group input-icon right">
+                                                    <span class="input-group-addon">
+                                                        <i class="fa fa-envelope font-purple"></i>
+                                                    </span>
+                                            <i class="fa fa-exclamation tooltips" data-original-title="Invalid email." data-container="body"></i>
+                                            <input id="email" class="input-error form-control" type="text" value=""> </div>
+                                    </div>
+
+                                </div>
+                                <div class="form-actions">
+                                    <button type="submit" class="btn blue">Submit</button>
+                                    <button type="button" class="btn default">Cancel</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+
+                </div>
+
             </div>
             <!-- END PAGE TITLE -->
             <!-- BEGIN PAGE TOOLBAR -->
