--- a/src/app/main/dashboard/dbContent.html
+++ b/src/app/main/dashboard/dbContent.html
@@ -5,6 +5,24 @@
         <div class="page-head">
             <!-- BEGIN PAGE TITLE -->
 
+            <ul class="page-breadcrumb breadcrumb">
+                <li>
+                    <a href="index.html">Home</a>
+                    <i class="fa fa-circle"></i>
+                </li>
+                <li>
+                    <span class="active">Dashboard</span>
+                </li>
+            </ul>
+
+
+
+            <!-- END PAGE BREADCRUMB -->
+            <!-- BEGIN PAGE BASE CONTENT -->
+            <div class="note note-info">
+                <p> Welcome</p>
+            </div>
+
             <div class="row">
                 <div class="col-md-12 ">
                     <!-- BEGIN SAMPLE FORM PORTLET-->
@@ -68,57 +86,8 @@
                                                     </span>
                                         </div>
                                     </div>
-                                    <div class="form-group">
-                                        <label>Left Icon</label>
-                                        <div class="input-icon">
-                                            <i class="fa fa-bell-o font-green"></i>
-                                            <input type="text" class="form-control" placeholder="Left icon"> </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label>Left Icon(.input-sm)</label>
-                                        <div class="input-icon input-icon-sm">
-                                            <i class="fa fa-bell-o"></i>
-                                            <input type="text" class="form-control input-sm" placeholder="Left icon"> </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label>Left Icon(.input-lg)</label>
-                                        <div class="input-icon input-icon-lg">
-                                            <i class="fa fa-bell-o"></i>
-                                            <input type="text" class="form-control input-lg" placeholder="Left icon"> </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label>Right Icon</label>
-                                        <div class="input-icon right">
-                                            <i class="fa fa-microphone fa-spin font-blue"></i>
-                                            <input type="text" class="form-control" placeholder="Right icon"> </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label>Right Icon(.input-sm)</label>
-                                        <div class="input-icon input-icon-sm right">
-                                            <i class="fa fa-bell-o"></i>
-                                            <input type="text" class="form-control input-sm" placeholder="Left icon"> </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label>Right Icon(.input-lg)</label>
-                                        <div class="input-icon input-icon-lg right">
-                                            <i class="fa fa-bell-o font-green"></i>
-                                            <input type="text" class="form-control input-lg" placeholder="Left icon"> </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label>Circle Input</label>
-                                        <div class="input-icon right">
-                                            <i class="fa fa-microphone"></i>
-                                            <input type="text" class="form-control input-circle" placeholder="Right icon"> </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label>Input with Icon</label>
-                                        <div class="input-group input-icon right">
-                                                    <span class="input-group-addon">
-                                                        <i class="fa fa-envelope font-purple"></i>
-                                                    </span>
-                                            <i class="fa fa-exclamation tooltips" data-original-title="Invalid email." data-container="body"></i>
-                                            <input id="email" class="input-error form-control" type="text" value=""> </div>
-                                    </div>
+
+
 
                                 </div>
                                 <div class="form-actions">
@@ -217,20 +186,10 @@
         </div>
         <!-- END PAGE HEAD-->
         <!-- BEGIN PAGE BREADCRUMB -->
-        <ul class="page-breadcrumb breadcrumb">
-            <li>
-                <a href="index.html">Home</a>
-                <i class="fa fa-circle"></i>
-            </li>
-            <li>
-                <span class="active">Page Layouts</span>
-            </li>
-        </ul>
-        <!-- END PAGE BREADCRUMB -->
-        <!-- BEGIN PAGE BASE CONTENT -->
-        <div class="note note-info">
-            <p> A black page template with a minimal dependency assets to use as a base for any custom page you create </p>
-        </div>
+
+
+
+
         <!-- END PAGE BASE CONTENT -->
     </div>
     <!-- END CONTENT BODY -->
