--- a/src/app/navigation/dashboard/dbNavigation.html
+++ b/src/app/navigation/dashboard/dbNavigation.html
@@ -6,12 +6,12 @@
             <li class="nav-item  active open">
                 <ul class="sub-menu">
                     <li class="nav-item active ">
-                        <a href="layout_language_bar.html" class="nav-link ">
+                        <a href="" class="nav-link ">
                             <span class="title">Inbox</span>
                         </a>
                     </li>
                     <li class="nav-item  ">
-                        <a href="layout_footer_fixed.html" class="nav-link ">
+                        <a href="" class="nav-link ">
                             <span class="title">Profile</span>
                         </a>
                     </li>
