--- a/src/app/main/dashboard/accept/accept.html
+++ b/src/app/main/dashboard/accept/accept.html
@@ -3,25 +3,8 @@
     <div class="page-content">
         <!-- BEGIN PAGE HEAD-->
         <div class="page-head">
-            <!-- BEGIN PAGE TITLE -->
 
-            <ul class="page-breadcrumb breadcrumb">
-                <li>
-                    <a href="index.html">Home</a>
-                    <i class="fa fa-circle"></i>
-                </li>
-                <li>
-                    <span class="active">Dashboard</span>
-                </li>
-            </ul>
-
-
-
-            <!-- END PAGE BREADCRUMB -->
             <!-- BEGIN PAGE BASE CONTENT -->
-            <div class="note note-info">
-                <p> Welcome</p>
-            </div>
 
             <div class="row">
                 <div class="col-md-12 ">
@@ -30,7 +13,7 @@
                         <div class="portlet-title">
                             <div class="caption font-red-sunglo">
                                 <i class="icon-settings font-red-sunglo"></i>
-                                <span class="caption-subject bold uppercase"> Registration</span>
+                                <span class="caption-subject bold uppercase"> Accept</span>
                             </div>
                             <div class="actions">
                                 <div class="btn-group">
@@ -59,42 +42,7 @@
                             </div>
                         </div>
                         <div class="portlet-body form">
-                            <form role="form">
-                                <div class="form-body">
-                                    <div class="form-group">
-                                        <label>Email Address</label>
-                                        <div class="input-group">
-                                                    <span class="input-group-addon">
-                                                        <i class="fa fa-envelope"></i>
-                                                    </span>
-                                            <input type="text" class="form-control" placeholder="Email Address"> </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label>Circle Input</label>
-                                        <div class="input-group">
-                                                    <span class="input-group-addon input-circle-left">
-                                                        <i class="fa fa-envelope"></i>
-                                                    </span>
-                                            <input type="text" class="form-control input-circle-right" placeholder="Email Address"> </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="exampleInputPassword1">Password</label>
-                                        <div class="input-group">
-                                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                                                    <span class="input-group-addon">
-                                                        <i class="fa fa-user font-red"></i>
-                                                    </span>
-                                        </div>
-                                    </div>
 
-
-
-                                </div>
-                                <div class="form-actions">
-                                    <button type="submit" class="btn blue">Submit</button>
-                                    <button type="button" class="btn default">Cancel</button>
-                                </div>
-                            </form>
                         </div>
                     </div>
 
