--- a/src/app/navigation/dashboard/dbNavigation.html
+++ b/src/app/navigation/dashboard/dbNavigation.html
@@ -5,14 +5,24 @@
 
             <li class="nav-item  active open">
                 <ul class="sub-menu">
-                    <li class="nav-item active ">
-                        <a href="" class="nav-link ">
+                    <li class="nav-item " id="inbox">
+                        <a ui-sref="app" class="nav-link ">
                             <span class="title">Inbox</span>
                         </a>
                     </li>
-                    <li class="nav-item  ">
-                        <a href="" class="nav-link ">
-                            <span class="title">Profile</span>
+                    <li class="nav-item" id="pending">
+                        <a ui-sref="app.pending" class="nav-link ">
+                            <span class="title">Pending</span>
+                        </a>
+                    </li>
+                    <li class="nav-item " id="accept">
+                        <a ui-sref="app.accept" class="nav-link ">
+                            <span class="title">Accept</span>
+                        </a>
+                    </li>
+                    <li class="nav-item" id="decline">
+                        <a ui-sref="app.decline" class="nav-link ">
+                            <span class="title">Decline</span>
                         </a>
                     </li>
                     <!--<li class="nav-item  ">-->
