--- a/src/app/core/layouts/dbLayout.html
+++ b/src/app/core/layouts/dbLayout.html
@@ -1,11 +1,19 @@
-
 <span class="page-container-bg-solid page-header-fixed page-sidebar-closed-hide-logo">
 <div ui-view="toolbar"></div>
 <div class="clearfix"></div>
 
 <div class="page-container">
-    <div ui-view="navigation"></div>
-    <div ui-view="content"></div>
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
+
+        <div ui-view="navigation"></div>
+        <div ui-view="content"></div>
+        </div>
+        <div class="col-md-1"></div>
+
+    </div>
+
 </div>
 
 </span>
