--- a/src/app/core/layouts/loginLayout.html
+++ b/src/app/core/layouts/loginLayout.html
@@ -1,6 +1,16 @@
+<span class="page-container-bg-solid page-header-fixed page-sidebar-closed-hide-logo">
+<div ui-view="toolbar"></div>
+<div class="clearfix"></div>
+    <div class="page-container">
 
-<div class="row text-center">
-<a ui-sref="app" class="btn green">Sign Up</a>
+
+        <div ui-view="content"></div>
 
 
     </div>
+
+    </span>
+
+
+
+
