--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -1,6 +1,25 @@
 
 <div class="row text-center">
-    <a ui-sref="app" class="btn green">Sign Up</a>
+    <button type="button" class="btn green" ng-click="vm.open()">Login</button>
+
 
 
 </div>
+
+<script type="text/ng-template" id="myModalContent.html">
+    <div class="modal-header">
+        <h3 class="modal-title" id="modal-title">Login</h3>
+    </div>
+    <div class="modal-body" id="modal-body">
+        <ul>
+            <li ng-repeat="item in $ctrl.items">
+                <a href="#" ng-click="$event.preventDefault(); vm.selected.item = item">{{ item }}</a>
+            </li>
+        </ul>
+        Selected: <b>{{ $ctrl.selected.item }}</b>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" type="button" ng-click="vm.ok()">Save</button>
+        <button class="btn btn-warning" type="button" ng-click="vm.cancel()">Cancel</button>
+    </div>
+</script>
