db toolbar style changes

--- a/src/app/toolbar/dashboard/dbToolbar.html
+++ b/src/app/toolbar/dashboard/dbToolbar.html
@@ -27,6 +27,7 @@
                         <li><a href="#about">HELP</a></li>
                     </ul>
                 </div>
+
                 <!-- END PAGE ACTIONS -->
                 <!-- BEGIN PAGE TOP -->
                 <div class="page-top">
@@ -143,7 +144,7 @@
                             <li class="dropdown dropdown-user dropdown-dark">
                                 <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"
                                    data-hover="dropdown" data-close-others="true">
-                                    <span class="username username-hide-on-mobile"> Doe </span>
+                                    <!--<span class="username username-hide-on-mobile"> Doe </span>-->
                                     <!-- DOC: Do not remove below empty space(&nbsp;) as its purposely used -->
                                     <img alt="" class="img-circle" src="../assets/img/avatar9.jpg"/> </a>
                                 <ul class="dropdown-menu dropdown-menu-default">
