dashboard toolbar style issue fixed

--- a/src/app/toolbar/dashboard/dbToolbar.html
+++ b/src/app/toolbar/dashboard/dbToolbar.html
@@ -31,6 +31,9 @@
                 <!-- END PAGE ACTIONS -->
                 <!-- BEGIN PAGE TOP -->
                 <div class="page-top">
+                    <div class="page-bar">
+                        <spans style="background-color: white;padding: 7px;font-size: 9px;margin-top:5px ">ACCOUNT TYPE:FREE | <span style="color: red">UPGRADE</span></spans>
+                    </div>
                     <!-- BEGIN HEADER SEARCH BOX -->
                     <!-- BEGIN TOP NAVIGATION MENU -->
                     <div class="top-menu">
