--- a/src/app/toolbar/dashboard/dbToolbar.css
+++ b/src/app/toolbar/dashboard/dbToolbar.css
@@ -11,6 +11,12 @@
     padding-left: 20px;
 }
 
+.page-header.navbar .page-bar {
+    margin: 25px 0 15px 10px;
+    padding: 0;
+    float: left;
+}
+
 
 .page-header.navbar .page-actions {
      margin: 0px 0px 0px 0px !important;
@@ -32,19 +38,20 @@
         text-decoration: none;
     }
 
-
 }
+
 @media screen and (max-width: 810px) {
     .page-header.navbar .page-actions {
         width: 100%!important;
         background-color: #00AC8D;
-        color: black!important;
         margin: 0px 0px 0px 0px !important;
         height: 35px;
     }
     .tool-link > li {
         float: left;
         display: inline;
+        font-size: 8px;
+
 
 
     }
@@ -53,7 +60,6 @@
         color: white;
         text-align: center;
         padding: 11px 8px;
-        font-size: 10px;
         text-decoration: none;
     }
     .page-header.navbar .page-top {
@@ -61,18 +67,16 @@
         width: 100%;
         float: right;
     }
+}
+@media screen and (max-width: 981px) {
+    .page-top{
+        /*float: left;*/
+        background-color: white;
+        width: 100%;
+    }
 
 
 }
-/*@media screen and (min-width: 600px) {*/
-    /*.tool-link > li {*/
-        /*/!*float: left;*!/*/
-        /*height: 75px;*/
-        /*padding: 25px 8px;*/
-    /*}*/
-
-
-/*}*/
 
 
 .tool-link {
