--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -1,3 +1,4 @@
+<!--
 
 <div class="row text-center">
     <button type="button" class="btn green" ng-click="vm.open()">Login</button>
@@ -22,4 +23,150 @@
         <button class="btn btn-primary" type="button" ng-click="vm.ok()">Save</button>
         <button class="btn btn-warning" type="button" ng-click="vm.cancel()">Cancel</button>
     </div>
-</script>
+</script>-->
+<!--.portlet.light.form-fit>.portlet-title {-->
+<!--style="background-image:'/assets/bg-images/bg-2.jpg'"-->
+<!--<div style="background: url(https://blackrockdigital.github.io/startbootstrap-business-casual/img/bg.jpg) no-repeat;centercenter fixed;">-->
+<div class="portlet light form-fit bordered col-md-offset-6 col-md-5 margin-top-30"
+     style="border-radius: 10px 10px 10px 10px !important;">
+    <div class="portlet-title " style="">
+        <div class="caption">
+            <span class="caption-subject  font-black bold uppercase">Registration</span>
+
+            <div class="caption-helper font-black font-sm">Please take a moment to complete all of the information
+                below.
+            </div>
+        </div>
+
+    </div>
+    <div class="portlet-body form">
+        <!-- BEGIN FORM-->
+        <form action="#" class="form-horizontal  ">
+            <br>
+
+            <div class="form-group">
+                <label class="col-md-3 control-label text-left">PROFILE FOR</label>
+
+                <div class="col-md-8">
+                    <select class="form-control">
+                        <option>Option 1</option>
+                        <option>Option 2</option>
+                        <option>Option 3</option>
+                        <option>Option 4</option>
+                        <option>Option 5</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-3 control-label text-left">NAME</label>
+
+                <div class="col-md-8">
+                    <input type="email" class="form-control" placeholder="Email Address">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-3 control-label">GENDER</label>
+
+                <div class="col-md-8">
+                    <input type="email" class="form-control" placeholder="Email Address">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-3 control-label">DATE OF BIRTH</label>
+
+                <div class="col-md-8">
+                    <input type="email" class="form-control" placeholder="Email Address">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-3 control-label">RELIGION</label>
+
+                <div class="col-md-8">
+                    <select class="form-control">
+                        <option>Option 1</option>
+                        <option>Option 2</option>
+                        <option>Option 3</option>
+                        <option>Option 4</option>
+                        <option>Option 5</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-3 control-label">EMAIL</label>
+
+                <div class="col-md-8">
+                    <input type="email" class="form-control" placeholder="Email Address">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-3 control-label pull-left">MOBILE NUMBER</label>
+
+                <div class="col-md-3">
+                    <select class="form-control">
+                        <option>+ 91</option>
+                        <option>+ 04</option>
+                        <option>+ 90</option>
+                        <option>+ 54</option>
+                        <option>+ 65</option>
+                    </select>
+                </div>
+
+                <div class="col-md-5">
+                    <input type="number" class="form-control" placeholder="Mobile Number">
+                </div>
+            </div>
+
+            <div class="form-group ">
+                <label class="col-md-3 control-label">PASSWORD</label>
+
+                <div class="col-md-8">
+                    <input type="password" class="form-control" placeholder="Password" style="margin-rightt: 5%">
+                </div>
+            </div>
+
+
+            <!--<div class="form-group">-->
+            <!--<label class="col-md-3 control-label">PASSWORD</label>-->
+
+            <!--<div class="col-md-offset-1 col-md-7 input-group">-->
+            <!--<input type="email" class="form-control" placeholder="Email Address"></div>-->
+            <!--</div>-->
+
+            <!--<span class="help-inline"> Inline help. </span>-->
+            <div class="form-group ">
+                <label class="col-md-3 control-label"></label>
+
+                <div class="col-md-8">
+                    <button type="button" class=" center-block col-md-12 btn red">
+                        Registration
+                    </button>
+                </div>
+            </div>
+        </form>
+        <!-- END FORM-->
+    </div>
+</div>
+
+
+<!--<div class="row">
+    <div class="col-md-6 pull-right">
+        &lt;!&ndash; BEGIN Portlet PORTLET&ndash;&gt;
+        <div class="portlet box blue pull-right" >
+            <div class="portlet-title">
+                <div class="caption">
+                    <i class="fa fa-gift"></i>Scrollable Content </div>
+                <div class="tools">
+
+                </div>
+            </div>
+            <div class="portlet-body portlet-empty"> </div>
+        </div>
+        &lt;!&ndash; END Portlet PORTLET&ndash;&gt;
+    </div>
+</div>-->
+<!--</div>-->
+
+
