--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -27,9 +27,8 @@
 <!--.portlet.light.form-fit>.portlet-title {-->
 <!--style="background-image:'/assets/bg-images/bg-2.jpg'"-->
 <!--<div style="background: url(https://blackrockdigital.github.io/startbootstrap-business-casual/img/bg.jpg) no-repeat;centercenter fixed;">-->
-<div class="portlet light form-fit bordered col-md-offset-6 col-md-5 margin-top-30"
-     style="border-radius: 10px 10px 10px 10px !important;">
-    <div class="portlet-title " style="">
+<div class="portlet light form-fit bordered col-md-offset-6 col-md-5 margin-top-30 reg-pannel" >
+    <div class="portlet-title reg-pannel-title" >
         <div class="caption">
             <span class="caption-subject  font-black bold uppercase">Registration</span>
 
