--- a/src/app/core/layouts/dbLayout.html
+++ b/src/app/core/layouts/dbLayout.html
@@ -6,9 +6,15 @@
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-10">
+<div class="row">
+    <div class="col-md-2">        <div ui-view="navigation"></div>
+    </div>
+    <div class="col-md-7">        <div ui-view="content"></div>
+    </div>
+    <div class="col-md-2">        <div ui-view="navigation"></div>
+    </div>
+</div>
 
-        <div ui-view="navigation"></div>
-        <div ui-view="content"></div>
         </div>
         <div class="col-md-1"></div>
 
