toolbar style issue fixed

--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -1,34 +1,89 @@
-<div class="row">
-    <!--<div class="col-md-12">-->
-    <div class="portlet light bordered">
+<footer class="navbar-fixed-bottom ">
+    <div class=" portlet light bordered">
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-11 ">
                 <div class="row">
                     <div class="col-md-12">
-                        <h4> About us</h4>
+                        <h4 class="heading heading-space"> About us</h4>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="col-md-2">
-                            <div class="aboutus-logo"></div>
+                        <div class="row">
+                            <div class="col-md-1 margin-top-20 padding-0">
+                                <div class="aboutus-logo"></div>
+                            </div>
+                            <div class="col-md-11 ">
+                                <p class="text-left description">
+                                    Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio
+                                    sem
+                                    nec elit. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non
+                                    commodo
+                                    luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis
+                                    consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat
+                                    porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit
+                                    amet
+                                    fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget
+                                    lacinia
+                                    odio sem nec elit. Cras mattis consectetur purus sit amet fermentum.
+                                </p>
+                            </div>
                         </div>
-                        <div class="col-md-10 ">
-                            <p class="text-left description">
-                                Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem
-                                nec elit. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo
-                                luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis
-                                consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat
-                                porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet
-                                fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia
-                                odio sem nec elit. Cras mattis consectetur purus sit amet fermentum.
-                            </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <h4 class="heading"> About us</h4>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <span class="description"> 24X7 Live help | Contact Us | Feedback | FAQ | Safety Trips</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <h4 class="heading"> Quick Link</h4>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <span class="description"> About Us | Blog | Feedback | Privacy Policy | Terms of Use | Site Map</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row margin-top-30 margin-bottom-25">
+                    <div class="col-md-12">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <span class="foot-text">Copyright © 2015 Marital . All Rights Reserved</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <span class="foot-text">
+                                            Contact Us
+                                            <i class="fa fa-facebook-f facebook-icon"></i>&nbsp;
+                                            <span class="fa fa-facebook-f"></span>&nbsp;
+                                            <i class="fa fa-google-plus google-plus-icon"> </i>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!--</div>-->
-</div>
+    </footer>
