--- a/src/app/footer/footer.css
+++ b/src/app/footer/footer.css
@@ -1,9 +1,40 @@
 .aboutus-logo{
+    width: 50px;
+    height: 50px;
+    background: #e9ecf3;
     border-radius: 50% !important;
-    color: grey !important;
-    width: 10px;
-    height: 10px;
 }
 .description{
-    color: grey;
+    color: #555;
+    font-size: 0.85em;
+    line-height: 1.8em;
+}
+.padding-0{
+   margin-right: -30px !important;
+}
+.heading{
+    color: #000;
+}
+.heading-space{
+    margin-bottom: -10px !important;
+}
+.foot-text{
+    color: #ddd;
+    font-size: 0.85em;
+    line-height: 1.8em;
+}
+.google-plus-icon{
+    background: red;
+    width: 26px;
+    height: 26px;
+    color: #fff;
+    line-height: 26px;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+}
+.facebook-icon{
+    color: blue;;
+}
+footer{
+    bottom: -25px !important;
 }
