--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -1,32 +1,4 @@
-<!--
-
-<div class="row text-center">
-    <button type="button" class="btn green" ng-click="vm.open()">Login</button>
-
-
-
-</div>
-
-<script type="text/ng-template" id="myModalContent.html">
-    <div class="modal-header">
-        <h3 class="modal-title" id="modal-title">Login</h3>
-    </div>
-    <div class="modal-body" id="modal-body">
-        <ul>
-            <li ng-repeat="item in $ctrl.items">
-                <a href="#" ng-click="$event.preventDefault(); vm.selected.item = item">{{ item }}</a>
-            </li>
-        </ul>
-        Selected: <b>{{ $ctrl.selected.item }}</b>
-    </div>
-    <div class="modal-footer">
-        <button class="btn btn-primary" type="button" ng-click="vm.ok()">Save</button>
-        <button class="btn btn-warning" type="button" ng-click="vm.cancel()">Cancel</button>
-    </div>
-</script>-->
-<!--.portlet.light.form-fit>.portlet-title {-->
-<!--style="background-image:'/assets/bg-images/bg-2.jpg'"-->
-<!--<div style="background: url(https://blackrockdigital.github.io/startbootstrap-business-casual/img/bg.jpg) no-repeat;centercenter fixed;">-->
+<div class="col-md-12">
 <div class="portlet light form-fit bordered col-md-offset-6 col-md-5 margin-top-30 reg-pannel" >
     <div class="portlet-title reg-pannel-title" >
         <div class="caption">
@@ -47,7 +19,7 @@
                 <label class="col-md-3 control-label text-left">PROFILE FOR</label>
 
                 <div class="col-md-8">
-                    <select class="form-control">
+                    <select class="form-control input-rounded">
                         <option>Option 1</option>
                         <option>Option 2</option>
                         <option>Option 3</option>
@@ -58,10 +30,10 @@
             </div>
 
             <div class="form-group">
-                <label class="col-md-3 control-label text-left">NAME</label>
+                <label class="col-md-3 control-label text-left ">NAME</label>
 
                 <div class="col-md-8">
-                    <input type="email" class="form-control" placeholder="Email Address">
+                    <input type="email" class="form-control input-rounded" placeholder="Email Address">
                 </div>
             </div>
 
@@ -80,10 +52,10 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-md-3 control-label">RELIGION</label>
+                <label class="col-md-3 control-label ">RELIGION</label>
 
                 <div class="col-md-8">
-                    <select class="form-control">
+                    <select class="form-control input-rounded">
                         <option>Option 1</option>
                         <option>Option 2</option>
                         <option>Option 3</option>
@@ -97,14 +69,14 @@
                 <label class="col-md-3 control-label">EMAIL</label>
 
                 <div class="col-md-8">
-                    <input type="email" class="form-control" placeholder="Email Address">
+                    <input type="email" class="form-control input-rounded" placeholder="Email Address">
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-md-3 control-label pull-left">MOBILE NUMBER</label>
+                <label class="col-md-3 control-label">MOBILE NUMBER</label>
 
                 <div class="col-md-3">
-                    <select class="form-control">
+                    <select class="form-control input-rounded">
                         <option>+ 91</option>
                         <option>+ 04</option>
                         <option>+ 90</option>
@@ -114,7 +86,7 @@
                 </div>
 
                 <div class="col-md-5">
-                    <input type="number" class="form-control" placeholder="Mobile Number">
+                    <input type="number" class="form-control input-rounded" placeholder="Mobile Number">
                 </div>
             </div>
 
@@ -122,7 +94,7 @@
                 <label class="col-md-3 control-label">PASSWORD</label>
 
                 <div class="col-md-8">
-                    <input type="password" class="form-control" placeholder="Password" style="margin-rightt: 5%">
+                    <input type="password" class="form-control input-rounded" placeholder="Password" style="margin-rightt: 5%">
                 </div>
             </div>
 
@@ -139,7 +111,7 @@
                 <label class="col-md-3 control-label"></label>
 
                 <div class="col-md-8">
-                    <button type="button" class=" center-block col-md-12 btn red">
+                    <button type="button" class=" center-block col-md-12 btn red input-rounded">
                         Registration
                     </button>
                 </div>
@@ -149,23 +121,45 @@
     </div>
 </div>
 
+</div>
 
-<!--<div class="row">
-    <div class="col-md-6 pull-right">
-        &lt;!&ndash; BEGIN Portlet PORTLET&ndash;&gt;
-        <div class="portlet box blue pull-right" >
-            <div class="portlet-title">
-                <div class="caption">
-                    <i class="fa fa-gift"></i>Scrollable Content </div>
-                <div class="tools">
+<!--<div class="row text-center">-->
+    <!--<button type="button" class="btn green" ng-click="vm.open()">Login</button>-->
 
-                </div>
-            </div>
-            <div class="portlet-body portlet-empty"> </div>
-        </div>
-        &lt;!&ndash; END Portlet PORTLET&ndash;&gt;
-    </div>
-</div>-->
+
+
 <!--</div>-->
 
+<script type="text/ng-template" id="myModalContent.html">
+    <div class="modal-header login-pannel-title">
+        <div class="caption">
+            <span class="caption-subject  font-black bold uppercase">Sign In</span></div>
+    </div>
+    <!--<div class="pull-right"><i class="close green"></i></div>-->
+    <div class="modal-body" id="modal-body">
+        <div class="form-group">
+            <label class=" uppercase">Email / Mobile Number / Member Id</label>
+            <input class="form-control spinner" type="text" placeholder="Email / Mobile NUmber / Member ID" />
+        </div>
+        <div class="form-group">
+            <label class=" uppercase"> Password</label>
+            <input class="form-control spinner" type="text" placeholder="Password" />
+        </div>
+        <div class="form-group">
+            <label class="sub-text"> Remember me</label>
+                <label class="checkbox-inline">
+                    <input type="checkbox" icheckbox_flat-red class="icheck"> Checkbox 1 </label>
+            </div>
+        <div class="icheck-inline">
+            <label>
+                <input type="checkbox" class="icheck"> Checkbox 1 </label>
+            </div>
+        </div>
 
+
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" type="button" ng-click="vm.ok()">Save</button>
+        <button class="btn btn-warning" type="button" ng-click="vm.cancel()">Cancel</button>
+    </div>
+</script>
