footer style changed

--- a/src/app/core/layouts/dbLayout.html
+++ b/src/app/core/layouts/dbLayout.html
@@ -1,4 +1,4 @@
-<span class="page-container-bg-solid page-header-fixed page-sidebar-closed-hide-logo">
+<div class="page-container-bg-solid page-header-fixed page-sidebar-closed-hide-logo">
 <div ui-view="toolbar"></div>
 <div class="clearfix"></div>
 
@@ -22,6 +22,6 @@
 
 </div>
     <div class="clearfix"></div>
-    <div ui-view="footer"></div>
+    <div class="" ui-view="footer"></div>
 
-</span>
+</div>
