--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -72,10 +72,10 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <span class="foot-text">
-                                            Contact Us
-                                            <i class="fa fa-facebook-f facebook-icon"></i>&nbsp;
-                                            <span class="fa fa-facebook-f"></span>&nbsp;
-                                            <i class="fa fa-google-plus google-plus-icon"> </i>
+                                            Contact Us &nbsp;
+                                            <a href="#" class=" socicon-btn socicon-btn-circle socicon-sm socicon-solid bg-blue bg-hover-grey-salsa font-white bg-hover-white socicon-facebook tooltips" data-original-title="Facebook"></a>&nbsp;
+                                            <a href="#" class="socicon-btn socicon-btn-circle socicon-sm socicon-solid bg-green bg-hover-grey-salsa font-white bg-hover-white socicon-twitter tooltips" data-original-title="Twitter"></a>&nbsp;
+                                            <a href="#" class="socicon-btn socicon-btn-circle socicon-sm socicon-solid bg-red bg-hover-grey-salsa font-white bg-hover-white socicon-google tooltips" data-original-title="Google"></a>
                                         </span>
                                     </div>
                                 </div>
