--- a/src/app/index.css
+++ b/src/app/index.css
@@ -5,3 +5,12 @@
 .modal{
     margin-top: 10%;
 }
+html, body. div{
+    margin: 0 !important;
+    padding: 0 !important;
+    width: 100%;
+}
+.row {
+    padding-right: 0px;
+    margin-right: 0px;
+}
