dashboard  style issue changes

--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -111,9 +111,9 @@
                 <label class="col-md-3 control-label"></label>
 
                 <div class="col-md-8">
-                    <button type="button" class=" center-block col-md-12 btn red input-rounded">
+                    <a ui-sref="reg" class=" center-block col-md-12 btn red input-rounded">
                         Registration
-                    </button>
+                    </a>
                 </div>
             </div>
         </form>
