--- a/src/app/core/layouts/profileLayout.html
+++ b/src/app/core/layouts/profileLayout.html
@@ -6,8 +6,16 @@
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-10">
-                 <div ui-view="navigation"></div>
-                      <div ui-view="content"></div>
+            <div class="row">
+                <div class="col-md-2">
+
+                <div ui-view="navigation"></div>
+                    </div>
+                    <div class="col-md-10">
+
+                    <div ui-view="content"></div>
+                        </div>
+                </div>
             </div>
 
         </div>
