profile page style changes

--- a/src/app/navigation/profile/profileNavigation.html
+++ b/src/app/navigation/profile/profileNavigation.html
@@ -15,13 +15,13 @@
                 </div>
                 <div class="col-md-12  "
                      style="text-align:center;margin-top: 20px;padding-bottom: 20px; border-bottom: 1px solid #eef1f5;">
-                    <button class="btn  " style="border-radius: 20px"> Profile preview</button>
+                    <button class="btn  uppercase" style="border-radius: 20px"> Profile preview</button>
                 </div>
 
                 <div class="col-md-12  " style="margin-top: 20px;margin: 10px">
                     <div class="row">
-                        <div class="col-md-8">Contact Details</div>
-                        <div class="col-md-3"><a class="btn btn-sm red-mint"> Edit</a>
+                        <div class="col-md-8 col-sm-6">Contact Details</div>
+                        <div class="col-md-3 col-sm-6"><a class="btn btn-sm red-mint"> Edit</a>
                         </div>
                     </div>
                     <div class="row" style="margin-top: 20px">
