manage photos and contact details page updated

--- a/src/app/main/profile/managephotos/managePhoto.html
+++ b/src/app/main/profile/managephotos/managePhoto.html
@@ -1,1 +1,41 @@
-Manage Photos
+<div class="page-content-wrapper">
+    <!-- BEGIN CONTENT BODY -->
+    <div class="page-content"style="margin-left:235px">
+        <!-- BEGIN PAGE HEAD-->
+        <div class="page-head">
+
+            <!-- BEGIN PAGE BASE CONTENT -->
+
+            <div class="row">
+                <div class="col-md-12 ">
+                    <!-- BEGIN SAMPLE FORM PORTLET-->
+                    <div class="portlet light bordered">
+                        <div class="portlet-title">
+                            <div class="caption ">
+                                <!--<i class="icon-settings font-red-sunglo"></i>-->
+                                <span class=" uppercase"> Manage Photos</span>
+                            </div>
+
+                        </div>
+                        <div class="portlet-body form">
+
+                        </div>
+                    </div>
+
+                </div>
+
+
+            </div>
+            <!-- END PAGE TITLE -->
+
+        </div>
+        <!-- END PAGE HEAD-->
+        <!-- BEGIN PAGE BREADCRUMB -->
+
+
+
+
+        <!-- END PAGE BASE CONTENT -->
+    </div>
+    <!-- END CONTENT BODY -->
+</div>
