--- a/src/app/toolbar/dashboard/dbToolbar.html
+++ b/src/app/toolbar/dashboard/dbToolbar.html
@@ -19,7 +19,8 @@
                 <!-- DOC: Remove "hide" class to enable the page header actions -->
                 <div class="page-actions" >
                     <ul class="tool-link">
-                        <li  ng-class="{ toolbarActive: isActive('/app')}"><a  ui-sref="app">MY HOME</a></li>
+                        <!--<li  ng-class="{ toolbarActive: isActive('/app')}"><a  ui-sref="app">MY HOME</a></li>-->
+                        <li ><a  ui-sref="profile">MY HOME</a></li>
                         <li ><a href="#news">MATCHES</a></li>
                         <li><a href="#contact">SEARCH</a></li>
                         <li><a href="#about">DAILY MATCHES</a></li>
