--- a/src/app/toolbar/profile/profileToolbar.html
+++ b/src/app/toolbar/profile/profileToolbar.html
@@ -20,7 +20,7 @@
                 <!-- DOC: Remove "hide" class to enable the page header actions -->
                 <div class="page-actions">
                     <ul class="tool-link">
-                        <li><a href="#news">HOME</a></li>
+                        <li><a ui-sref="app">HOME</a></li>
                         <li><a href="#contact">SEARCH</a></li>
                         <li><a href="#about">MATCHES</a></li>
                         <li><a href="#about">INBOX</a></li>
