--- a/src/app/toolbar/dashboard/dbToolbar.html
+++ b/src/app/toolbar/dashboard/dbToolbar.html
@@ -22,7 +22,7 @@
                         <!--<li  ng-class="{ toolbarActive: isActive('/app')}"><a  ui-sref="app">MY HOME</a></li>-->
                         <li ><a  ui-sref="profile">MY HOME</a></li>
                         <li ><a href="#news">MATCHES</a></li>
-                        <li><a href="#contact">SEARCH</a></li>
+                        <li><a ui-sref="search">SEARCH</a></li>
                         <li><a href="#about">DAILY MATCHES</a></li>
                         <li><a href="#about">MESSAGES</a></li>
                         <li><a href="#about">HELP</a></li>
