--- a/src/app/core/layouts/searchLayout.html
+++ b/src/app/core/layouts/searchLayout.html
@@ -1,10 +1,28 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<div class="page-container-bg-solid page-header-fixed page-sidebar-closed-hide-logo">
+    <div ui-view="toolbar"></div>
+    <div class="clearfix"></div>
 
-</body>
-</html>
+    <div class="page-container" style="margin-top:150px">
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
+                <div class="row">
+
+                    <div class="col-md-9">
+                        <div ui-view="content"></div>
+                    </div>
+                    <div class="col-md-2">
+                        <div ui-view="navigation"></div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-md-1"></div>
+
+        </div>
+
+    </div>
+    <div class="clearfix"></div>
+    <div class="" ui-view="footer"></div>
+
+</div>
