--- a/src/app/main/registration/registration.html
+++ b/src/app/main/registration/registration.html
@@ -1,5 +1,17 @@
-<div class="col-md-12">
+<div class="col-md-12 page-content">
+    <div class="caption pull">
+        <span class="caption-subject  font-black bold uppercase">Registration</span>
+
+        <div class="caption-helper font-black font-sm">Please take a moment to complete all of the information
+            below.
+        </div>
+    </div>
+</div>
+
     <div class="portlet light form-fit bordered col-md-offset-6 col-md-5 margin-top-30 reg-pannel" >
+
+
+
         <div class="portlet-title reg-pannel-title" >
             <div class="caption">
                 <span class="caption-subject  font-black bold uppercase">Registration</span>
